test/libsolidity/syntaxTests/iceRegressionTests/declarationUnaryTuple/declaration_unary_plus_tuple_compound_assign.sol
contract C
{
    function f(int x) public
    {
        (x /= 1) + +(1,1);
    }
}
// ----
// ParserError 9636: (67-68): Use of unary + is disallowed.
